modify config for hive